Align with upstream