@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.hashiprobr</groupId>
   <artifactId>sdx-rest-jackson</artifactId>
-  <version>0.0.8-SNAPSHOT</version>
+  <version>0.0.10-SNAPSHOT</version>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Jackson extension for sdx-rest.</description>
   <url>https://github.com/hashiprobr/sdx-java-rest-jackson</url>
@@ -38,23 +38,23 @@
     <dependency>
       <groupId>io.github.hashiprobr</groupId>
       <artifactId>sdx-rest</artifactId>
-      <version>0.0.8-SNAPSHOT</version>
+      <version>0.0.10-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.14.1</version>
+      <version>2.14.2</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
-      <version>5.9.1</version>
+      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
-      <version>4.11.0</version>
+      <version>5.2.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -79,12 +79,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.11.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
+        <version>3.0.0</version>
+        <configuration>
+          <argLine>
+            --add-opens br.pro.hashi.sdx.rest.jackson/br.pro.hashi.sdx.rest.jackson.mock=br.pro.hashi.sdx.rest
+            --add-opens br.pro.hashi.sdx.rest.jackson/br.pro.hashi.sdx.rest.jackson.mock=com.fasterxml.jackson.databind
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -107,7 +113,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.4.1</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
